# pepper-robot-ros2-gazebo-simulation

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  test_e2e_headless.sh
gazebo_model_velocity_plugin/: CMakeLists.txt  README.md  package.xml
gazebo_model_velocity_plugin/include/gazebo_model_velocity_plugin/: gazebo_ros_model_velocity.h
gazebo_model_velocity_plugin/src/: gazebo_ros_model_velocity.cpp
patches/: fix_gazebo_ros2_control_urdf_argv.patch
pepper_laser_bridge/: CMakeLists.txt  package.xml
pepper_laser_bridge/scripts/: pepper_laser_bridge_node.py
pepper_meshes/: CMakeLists.txt  package.xml
pepper_robot/pepper_description/: CMakeLists.txt  package.xml
pepper_robot/pepper_description/config/: urdf.rviz
pepper_robot/pepper_description/urdf/pepper1.0_generated_urdf/: pepper.urdf  pepperGazebo.xacro  pepperGazeboCPU.xacro  pepperGazeboCPU_no_arms.xacro
pepper_robot/pepper_robot/: CMakeLists.txt  package.xml
pepper_virtual/: README.md  start_docker.sh
pepper_virtual/pepper_control/: CMakeLists.txt  package.xml
pepper_virtual/pepper_control/config/: pepper_ros2_controllers.yaml  pepper_ros2_controllers_with_arms.yaml
pepper_virtual/pepper_gazebo_plugin/: CMakeLists.txt  package.xml
pepper_virtual/pepper_gazebo_plugin/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  nav2_params.yaml  pepper_sensors.rviz  pepper_sensors_rviz2.rviz
pepper_virtual/pepper_gazebo_plugin/launch/: pepper_gazebo_plugin_Y20_CPU_no_arms.launch.py  pepper_gazebo_plugin_house1.launch.py  pepper_gazebo_plugin_nao_test.launch.py  pepper_gazebo_plugin_simple_office_with_people.launch.py  pepper_gazebo_plugin_small_office.launch.py  pepper_navigation.launch.py
pepper_virtual/pepper_gazebo_plugin/maps/: map.pgm
pepper_virtual/pepper_gazebo_plugin/scripts/: laser_publisher.py  odom_publisher.py
pepper_virtual/pepper_gazebo_plugin/worlds/: house1.world  naoFoot.world
velocity_bridge/: CMakeLists.txt  package.xml
velocity_bridge/scripts/: ros_velocity_publisher.py
