<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_model_velocity_plugin</name>
  <version>1.0.0</version>
  <description>Gazebo plugin for omni-directional velocity control of Pepper robot</description>
  <maintainer email="tuncismail@users.noreply.github.com">Ismail Tunc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
