<?xml version="1.0"?>
<package format="3">
  <name>pepper_laser_bridge</name>
  <version>1.0.0</version>
  <description>UDP to ROS 2 laser scan bridge for real Pepper robot</description>
  <maintainer email="tuncismail@users.noreply.github.com">Ismail Tunc</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
