<?xml version="1.0"?>
<package format="3">
  <name>pepper_meshes</name>
  <version>1.0.0</version>
  <description>Pepper robot mesh files</description>
  <maintainer email="tuncismail@users.noreply.github.com">Ismail Tunc</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
