<?xml version="1.0"?>
<package format="3">
  <name>velocity_bridge</name>
  <version>1.0.0</version>
  <description>ROS 2 to UDP velocity command bridge for real Pepper robot</description>
  <maintainer email="tuncismail@users.noreply.github.com">Ismail Tunc</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
